Fix spacing between navbar and content

--- a/styles/App.scss
+++ b/styles/App.scss
@@ -453,7 +453,7 @@ h6 {
   width: 100vw;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 3.5em auto;
+  grid-template-rows:max-content auto;
 
   .NavBar {
     grid-row: 1;
